[gd_scene load_steps=21 format=3 uid="uid://cg0bfm6nq1jf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m5de1"]
[ext_resource type="PackedScene" uid="uid://bhk0gxtj2fpal" path="res://models/guns/blasterN.glb" id="2_yfn1f"]
[ext_resource type="Resource" uid="uid://101aufrw5vw1" path="res://resources/blasterN.tres" id="3_6l1ju"]
[ext_resource type="PackedScene" uid="uid://dhf37e8smrixa" path="res://models/guns/blasterD.glb" id="3_7u4op"]
[ext_resource type="Texture2D" uid="uid://bvj4ff1830wt5" path="res://textures/crosshair/crosshair001.png" id="3_mmp11"]
[ext_resource type="Script" path="res://scripts/WeaponManager.gd" id="4_om0kb"]
[ext_resource type="PackedScene" uid="uid://dw134blmhnscd" path="res://models/guns/blasterI.glb" id="4_pnvxi"]
[ext_resource type="Resource" uid="uid://dtber6y4g44jb" path="res://resources/blasterD.tres" id="4_sj0sx"]
[ext_resource type="PackedScene" uid="uid://cl30wottdebg" path="res://models/guns/blasterF.glb" id="5_m88sa"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="10_21lag"]
[ext_resource type="PackedScene" uid="uid://bn8krpx4247tb" path="res://models/guns/blasterK.glb" id="11_v2j63"]
[ext_resource type="AnimationLibrary" uid="uid://bcgaxwhtaqmof" path="res://animations/blasterD.res" id="12_7gwx6"]
[ext_resource type="AnimationLibrary" uid="uid://cepfh4d5gh0x1" path="res://animations/blasterF.res" id="13_6i8e4"]
[ext_resource type="AnimationLibrary" uid="uid://cwbx7mumf585o" path="res://animations/blasterI.res" id="14_8l8hc"]
[ext_resource type="AnimationLibrary" uid="uid://deslqonalow80" path="res://animations/blasterK.res" id="15_7u38k"]
[ext_resource type="AnimationLibrary" uid="uid://dturmbnh6bv4r" path="res://animations/blasterN.res" id="16_f1dke"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nh3lq"]

[sub_resource type="Animation" id="Animation_81bry"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterN:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blasterD:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blasterD:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("blasterD:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.7, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("blasterI:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.7, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("blasterI:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("blasterI:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("blasterK:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.7, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("blasterK:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("blasterK:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("BulletPoint:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("../..:fov")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("blasterF:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.7, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("blasterF:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("blasterF:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jayc3"]
_data = {
"RESET": SubResource("Animation_81bry")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_kb1i8"]
size = Vector3(2, 1, 2)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_m5de1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("10_21lag")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 254.0
offset_bottom = 153.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "current_weapon: "

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "ammo: "

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "weapon_list: "

[node name="WeaponList" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_mmp11")
stretch_mode = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_nh3lq")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="WeaponManager" type="Node3D" parent="MainCamera"]
script = ExtResource("4_om0kb")
weapon_list = Array[Resource("res://scripts/weapon_resource.gd")]([ExtResource("4_sj0sx"), ExtResource("3_6l1ju")])

[node name="FPSRig" type="Node3D" parent="MainCamera/WeaponManager"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainCamera/WeaponManager/FPSRig"]

[node name="blasterN" parent="MainCamera/WeaponManager/FPSRig" instance=ExtResource("2_yfn1f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
visible = false

[node name="blasterD" parent="MainCamera/WeaponManager/FPSRig" instance=ExtResource("3_7u4op")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
visible = false

[node name="blasterI" parent="MainCamera/WeaponManager/FPSRig" instance=ExtResource("4_pnvxi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
visible = false

[node name="blasterK" parent="MainCamera/WeaponManager/FPSRig" instance=ExtResource("11_v2j63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
visible = false

[node name="blasterF" parent="MainCamera/WeaponManager/FPSRig" instance=ExtResource("5_m88sa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainCamera/WeaponManager/FPSRig"]
libraries = {
"": SubResource("AnimationLibrary_jayc3"),
"blasterD": ExtResource("12_7gwx6"),
"blasterF": ExtResource("13_6i8e4"),
"blasterI": ExtResource("14_8l8hc"),
"blasterK": ExtResource("15_7u38k"),
"blasterN": ExtResource("16_f1dke")
}

[node name="BulletPoint" type="Marker3D" parent="MainCamera/WeaponManager/FPSRig"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="PickupDetection" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_kb1i8")

[connection signal="update_ammo" from="MainCamera/WeaponManager" to="CanvasLayer" method="_on_weapon_manager_update_ammo"]
[connection signal="update_weapon_list" from="MainCamera/WeaponManager" to="CanvasLayer" method="_on_weapon_manager_update_weapon_list"]
[connection signal="weapon_changed" from="MainCamera/WeaponManager" to="CanvasLayer" method="_on_weapon_manager_weapon_changed"]
[connection signal="animation_finished" from="MainCamera/WeaponManager/FPSRig/AnimationPlayer" to="MainCamera/WeaponManager" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PickupDetection" to="MainCamera/WeaponManager" method="_on_pickup_detection_body_entered"]
